# jfxz

./: .env.example  .env.production.example  .gitignore  agent.md  agents.md  claude.md  dev_start.ps1  docker-compose.yml  nginx.conf  server.pem
.claude/: settings.local.json  statusline.sh
backend/: .dockerignore  AGENTS.md  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py  models.py  worker.py
backend/app/api/: routes.py
backend/app/cli/: __init__.py  db.py  user.py
backend/app/core/: config.py  database.py  security.py
backend/app/prompts/: __init__.py  round_1_character.md  round_2_logic.md  round_3_style.md  system_prompt.md
backend/app/scripts/: create_admin.py
backend/app/services/: agent_service.py  billing_service.py  scheduler_service.py  version_service.py  workspace_structure.py
backend/migrations/versions/: 20260508223247__initial_schema.sql  20260509120000__agent_run_store_fk.sql  20260512120000__work_sharing.sql  20260513120000__chapter_versions.sql  20260515120000__rename_check_config_keys.sql  20260518000000__writing_prompts.sql  20260518120000__ai_prompt_description_config.sql  20260518180000__work_planning_fields.sql
backend/tests/: README.md  conftest.py  test_admin_credit_transactions.py  test_api.py  test_api_edges.py  test_config.py  test_route_coverage.py  test_route_gaps.py  test_runtime_cli.py  test_services.py  test_share.py
docs/: 001项目概述.md  db-migration-spec.md  前后台界面规划文档.md  技术选型报告.md  支付接入需求文档.md  数据库设计文档.md  部署文档.md
frontend/: .dockerignore  AGENTS.md  Dockerfile  components.json  eslint.config.mjs  (+6 more)
(+152 files in other folders)
